# language

./: .autorc  .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  detekt.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tsconfig.json  tsup.config.ts  vitest.bench.config.mts  vitest.config.mts
.circleci/: config.yml
common/static-xlrs/: BUILD  package.json
common/static-xlrs/src/: index.d.ts  index.js
common/static-xlrs/src/datatypes/xlr/: BooleanType.json  CollectionType.json  DateType.json  IntegerNNType.json  IntegerPosType.json  IntegerType.json  PhoneType.json  StringType.json  manifest.d.ts  manifest.js  manifest.json
common/test-utils/: BUILD  package.json
dsl/a2ui/: BUILD
dsl/a2ui/src/: __init__.py  converter.py  models.py
dsl/a2ui/src/__tests__/: test_converter.py  test_models.py
dsl/fluent/: BUILD  README.md  package.json
dsl/fluent/scripts/: generate-mocks.ts
dsl/fluent/src/core/base-builder/: types.ts
dsl/javascript/: BUILD  README.md  package.json
dsl/javascript/src/: types.ts
dsl/javascript/src/benchmarks/: dump-scenarios.test.ts  memory-profile.test.ts
dsl/kotlin/: .editorconfig  BUILD.bazel  pom.tpl
dsl/kotlin/src/benchmark/kotlin/com/intuit/playerui/lang/dsl/benchmarks/builders/: CollectionBuilderBenchmark.kt  InputBuilderBenchmark.kt  TextBuilderBenchmark.kt
dsl/kotlin/src/benchmark/kotlin/com/intuit/playerui/lang/dsl/benchmarks/flows/: ComplexNestedBenchmark.kt  ProductionScaleBenchmark.kt  SimpleFormBenchmark.kt  SwitchHeavyBenchmark.kt  TemplateHeavyBenchmark.kt
dsl/kotlin/src/benchmark/kotlin/com/intuit/playerui/lang/dsl/benchmarks/shared/: BenchmarkScenarios.kt  DumpScenarios.kt  JsonUtils.kt  MemoryProfiler.kt
dsl/kotlin/src/main/: AndroidManifest.xml
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/: FluentDslMarker.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/core/: AssetWrapperBuilder.kt  AuxiliaryStorage.kt  BuildContext.kt  BuildPipeline.kt  FluentBuilder.kt  StoredValue.kt  SwitchSupport.kt  TemplateConfig.kt  ValueStorage.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/flow/: Flow.kt  NavigationBuilder.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/id/: IdGenerator.kt  IdRegistry.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/schema/: FlowSchemaSupport.kt  SchemaBindings.kt  SchemaGenerator.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/tagged/: ExpressionAliases.kt  StandardExpressions.kt  TaggedValue.kt
dsl/kotlin/src/main/kotlin/com/intuit/playerui/lang/dsl/types/: PlayerTypes.kt
dsl/kotlin/src/test/kotlin/com/intuit/playerui/lang/dsl/: ApplicabilityTest.kt  BuildPipelineSwitchTest.kt  FlowTest.kt  FluentBuilderBaseTest.kt  IdGeneratorTest.kt  IntegrationTest.kt  NavigationBuilderTest.kt  NestedAssetWrapperTest.kt  ProjectConfig.kt  SchemaBindingsTest.kt  SchemaGeneratorTest.kt  StandardExpressionsTest.kt
dsl/kotlin/src/test/kotlin/com/intuit/playerui/lang/dsl/mocks/builders/: ActionBuilder.kt  CollectionBuilder.kt  ContentCardBuilder.kt  InputBuilder.kt  TextBuilder.kt
dsl/python/: BUILD
dsl/react/: BUILD  README.md  package.json
dsl/react/src/compiler/: compiler.ts
generators/fluent/: BUILD  README.md  package.json
generators/fluent/src/: builder-class-generator.ts  cli.ts  generator.ts  import-generator.ts  index.ts  type-collector.ts  type-transformer.ts
generators/fluent/src/__tests__/: cli.test.ts  default-value-generator.test.ts  generator.test.ts  import-generator.test.ts  type-collector.test.ts  type-transformer.test.ts  utils.test.ts
generators/javascript/: BUILD  README.md  package.json
generators/javascript/src/: builder-class-generator.ts  cli.ts  default-value-generator.ts  generator.ts  import-generator.ts  index.ts  path-utils.ts  type-transformer.ts  utils.ts
generators/javascript/src/__tests__/: builder-class-generator.test.ts  cli.test.ts  generator.test.ts  import-generator.test.ts  path-utils.test.ts  type-transformer.test.ts
generators/kotlin/: BUILD.bazel  pom.tpl
generators/kotlin/src/main/kotlin/com/intuit/playerui/lang/generator/: ClassGenerator.kt  CodeWriter.kt  DefaultValueGenerator.kt  Generator.kt  Main.kt  SchemaBindingGenerator.kt  TypeMapper.kt
generators/kotlin/src/test/kotlin/com/intuit/playerui/lang/generator/: ClassGeneratorTest.kt  DefaultValueGeneratorTest.kt  GeneratorIntegrationTest.kt  ProjectConfig.kt  SchemaBindingGeneratorTest.kt  TestFixtures.kt  TypeMapperTest.kt  XlrDeserializerTest.kt
generators/python/: BUILD
generators/python/src/: __main__.py  generator.py  utils.py
generators/python/src/__tests__/: test_generator.py
lsp/complexity-check-plugin/: BUILD  README.md  package.json
lsp/complexity-check-plugin/src/: complexity-check.ts
lsp/complexity-check-plugin/src/__tests__/: complexity-check-plugin.test.ts
lsp/json-language-server/: BUILD  README.md  package.json
lsp/json-language-server/src/: index.ts
lsp/json-language-service/: BUILD  README.md  package.json
lsp/json-language-service/src/: constants.ts  index.ts  types.ts  utils.ts
lsp/json-language-service/src/__tests__/: service.test.ts
lsp/json-language-service/src/parser/: types.ts
lsp/json-language-service/src/plugins/: asset-wrapper-array-plugin.ts  binding-schema-plugin.ts  schema-validation-plugin.ts  xlr-plugin.ts
lsp/json-language-service/src/xlr/: registry.ts  service.ts  transforms.ts
lsp/metrics-output-plugin/: BUILD  README.md  package.json
lsp/metrics-output-plugin/src/: metrics-output.ts
lsp/metrics-output-plugin/src/__tests__/: metrics-output-plugin.test.ts
lsp/typescript-expression-plugin/: BUILD  package.json
lsp/typescript-expression-plugin/src/: service.ts  transforms.ts  utils.ts
lsp/typescript-expression-plugin/src/__tests__/: service.test.ts
scripts/: compare_benchmarks.js  run_all_benchmarks.sh  run_js_benchmarks.sh  run_js_memory_profile.sh  run_kotlin_benchmarks.sh  run_output_verification.sh  verify_output_equivalence.js
(+51 files in other folders)
