module(name = "player-lang", version = "1.0")

bazel_dep(name = "rules_player")

archive_override(
  module_name = "rules_player",
  strip_prefix = "rules_player-2.3.0",
  urls = ["https://github.com/player-ui/rules_player/archive/refs/tags/v2.3.0.tar.gz"],
  integrity = "sha256-ic72uLj5+fdjFXxwmtRrHGPlWA3ewTXB6Gx6TRMKgh4="
)

bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.6.3")

####### Node.js version #########
bazel_dep(name = "rules_nodejs", version = "6.6.2")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.21.1")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    data = [
        "//:package.json",
    ],
    npmrc = "//:.npmrc",
    npm_package_target_name = "{dirname}"
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

####### Python Setup #########
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

use_repo(python, "python_3_13")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pypi")

####### Kotlin #########
bazel_dep(name = "rules_kotlin", version = "2.2.1")
bazel_dep(name = "rules_android", version = "0.7.1")

android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
use_repo(android_sdk_repository_extension, "androidsdk")
register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_detekt", version = "0.8.1.13")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = ["bazel_worker_java", "player-lang"],
    artifacts = [
        "org.jetbrains.kotlin:kotlin-stdlib:2.3.0",
        "org.jetbrains.kotlin:kotlin-test:2.3.0",
        "org.jetbrains.kotlin:kotlin-test-junit5:2.3.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0",
        "io.kotest:kotest-runner-junit5:6.0.7",
        "io.kotest:kotest-assertions-core:6.0.7",
        "io.kotest:kotest-assertions-json:6.0.7",
        "org.junit.jupiter:junit-jupiter-api:5.7.2",
        "org.junit.jupiter:junit-jupiter-engine:5.7.2",
        "org.junit.jupiter:junit-jupiter-params:5.7.2",
        "org.junit.platform:junit-platform-commons:1.7.2",
        "org.junit.platform:junit-platform-console:1.7.2",
        "org.junit.platform:junit-platform-engine:1.7.2",
        "org.junit.platform:junit-platform-launcher:1.7.2",
        "org.junit.platform:junit-platform-suite-api:1.7.2",
        "org.apiguardian:apiguardian-api:1.0.0",
        "org.opentest4j:opentest4j:1.1.1",
        "com.intuit.playerui.xlr:xlr-types:0.2.0--canary.4.100-SNAPSHOT",
        "com.squareup:kotlinpoet-jvm:2.1.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://central.sonatype.com/repository/maven-snapshots",
    ],
)
use_repo(maven, "maven")
########################

build_constants = use_repo_rule("@rules_player//distribution:defs.bzl", "build_constants")
build_constants(
    name = "build_constants",
    constants = {
        "GROUP": "com.intuit.playerui.lang",
    },
    version_file = "//:VERSION",
)
