load("@rules_player//kotlin:defs.bzl", "kt_jvm")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_config")
load("@rules_detekt//detekt:defs.bzl", "detekt_test")
load("@build_constants//:constants.bzl", "GROUP", "VERSION")

package(default_visibility = ["//visibility:public"])

ktlint_config(
    name = "lint_config",
    editorconfig = ".editorconfig",
)

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = ["@rules_kotlin//kotlin/compiler:kotlin-serialization-compiler-plugin"],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = ["@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json"],
)

detekt_test(
    name = "detekt",
    srcs = glob(["src/main/kotlin/**/*.kt", "src/test/kotlin/**/*.kt"]),
    cfgs = ["//:detekt.yml"],
    build_upon_default_config = True,
    html_report = True,
    tags = ["manual"],
)

kt_jvm(
    name = "kotlin-dsl",
    group = GROUP,
    version = VERSION,
    lint_config = ":lint_config",
    main_opts = "//:kt_opts",
    main_deps = [
        ":kotlin_serialization",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
    test_package = "com.intuit.playerui.lang.dsl",
    test_opts = "//:kt_opts",
    test_deps = [
        "@maven//:io_kotest_kotest_assertions_core",
        "@maven//:io_kotest_kotest_assertions_json",
        "@maven//:io_kotest_kotest_runner_junit5",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
    pom_template = ":pom.tpl",
)

# Benchmark support with JMH

# AllOpen plugin for JMH @State annotations (makes classes open)
kt_compiler_plugin(
    name = "open_for_jmh_plugin",
    id = "org.jetbrains.kotlin.allopen",
    options = {
        "annotation": "org.openjdk.jmh.annotations.State",
    },
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_allopen",
    ],
)

# JMH annotation processor as java_plugin
java_plugin(
    name = "jmh_annotation_processor",
    processor_class = "org.openjdk.jmh.generators.BenchmarkProcessor",
    deps = [
        "@maven//:org_openjdk_jmh_jmh_generator_annprocess",
    ],
)

# JMH library with exported annotation processor
java_library(
    name = "jmh_lib",
    exports = ["@maven//:org_openjdk_jmh_jmh_core"],
    exported_plugins = [":jmh_annotation_processor"],
)

kt_jvm_library(
    name = "kotlin-dsl-benchmarks",
    srcs = glob(["src/benchmark/kotlin/**/*.kt"]),
    testonly = True,
    kotlinc_opts = "//:kt_opts",  # Java 21 target to match main DSL
    deps = [
        ":kotlin-dsl",
        ":kotlin-dsl-test",
        ":jmh_lib",  # Uses exported_plugins for annotation processing
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
    plugins = [":open_for_jmh_plugin"],  # Makes @State classes open
)

java_binary(
    name = "run_benchmarks",
    main_class = "org.openjdk.jmh.Main",
    testonly = True,
    runtime_deps = [":kotlin-dsl-benchmarks"],
)

java_binary(
    name = "dump_scenarios",
    main_class = "com.intuit.playerui.lang.dsl.benchmarks.shared.DumpScenariosKt",
    testonly = True,
    runtime_deps = [":kotlin-dsl-benchmarks"],
)
